Ajuste ao selecionar Annotation Mapa, Adicionada nova View Consulta e nova Classe Status

--- a/SeverinoApp.iOS/SeverinoApp.iOS.csproj
+++ b/SeverinoApp.iOS/SeverinoApp.iOS.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Render\LoadingOverlay.cs" />
     <Compile Include="Render\TableEndereco.cs" />
     <Compile Include="Render\PickerDataModel.cs" />
+    <Compile Include="ConsultaViewController.cs" />
+    <Compile Include="ConsultaViewController.designer.cs">
+      <DependentUpon>ConsultaViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="..\SeverinoApp\SeverinoApp.projitems" Label="Shared" Condition="Exists('..\SeverinoApp\SeverinoApp.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
